# smolagents-tools

./: PYPI_PACKAGE_SUMMARY.md  README.md  TEST_RESULTS.md  VNC_BASE64_FEATURE.md  pyproject.toml  test_package_import.py
examples/: README.md  basic_usage.py  bedrock_example.py  macos_README.md  macos_automation_example.py  smolagents_codeagent_demo.py  vnc_base64_parameterized.py  vnc_example.py  web_automation_agent.py
smolagents_tools/: __init__.py  base.py  bash.py  browser.py  macos.py  planning.py  tools.py  web_search.py
smolagents_tools/providers/: bedrock.py
smolagents_tools/utils/: __init__.py  bash.py  browser.py  chat_completion.py  file_editor.py  macos.py  planning.py  python_executor.py  vnc.py  web_crawler.py  web_search.py
smolagents_tools/utils/providers/: __init__.py
tests/: test_smolagents_tools.py  test_vnc_tool.py
