[project]
name = "smolagents-tools"
version = "0.1.0"
description = "Comprehensive collection of tools adapted from OpenManus for smolagents CodeAct loop"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Smolagents Tools Contributors"}]
# license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "smolagents",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "duckduckgo-search>=3.0.0",
    "googlesearch-python>=1.2.0",
    "playwright>=1.20.0",
    "selenium>=4.0.0",
    "helium>=3.0.0",
    "crawl4ai>=0.2.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "boto3>=1.26.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "vncdotool>=0.13.0",
]

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yourusername/smolagents-tools"
Changelog = "https://github.com/yourusername/smolagents-tools/releases"
Issues = "https://github.com/yourusername/smolagents-tools/issues"
CI = "https://github.com/yourusername/smolagents-tools/actions"
Repository = "https://github.com/yourusername/smolagents-tools"
Documentation = "https://github.com/yourusername/smolagents-tools#readme"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
search = [
    "duckduckgo-search>=3.0.0",
    "googlesearch-python>=1.2.0",
]
browser = [
    "playwright>=1.20.0",
    "selenium>=4.0.0",
    "helium>=3.0.0",
]
crawler = [
    "crawl4ai>=0.2.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
]
# macos = [
#     "mlx-use>=0.0.3",
#     "pyobjc>=11.0.0; sys_platform == 'darwin'",
#     "pycocoa>=25.1.18; sys_platform == 'darwin'",
# ]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "boto3>=1.26.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "vncdotool>=0.13.0",
]
all = [
    "duckduckgo-search>=3.0.0",
    "googlesearch-python>=1.2.0",
    "playwright>=1.20.0",
    "selenium>=4.0.0",
    "helium>=3.0.0",
    "crawl4ai>=0.2.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "pyobjc>=11.0.0; sys_platform == 'darwin'",
    "pycocoa>=25.1.18; sys_platform == 'darwin'",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "boto3>=1.26.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "vncdotool>=0.13.0",
]

[project.scripts]
smolagents-tools-demo = "examples.basic_usage:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["smolagents_tools*", "examples*"]

[tool.setuptools.package-data]
smolagents_tools = ["*.py"]
examples = ["*.py", "*.md"]
